--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -408,16 +408,23 @@ $button_border_width: 1px;
             @include linear-gradient(alpha(mix($bg, $fg, .2), .4));
             /*border: 1px solid alpha($bg, .2);*/
             opacity: .6;
-
-            color: mix($bg, $fg, .5);
+            color: mix($bg, $fg, .6);
             box-shadow: none;
+
+            :disabled {
+                color: mix($bg, $fg, .6);
+            }
         }
 
         &:active:disabled, &:checked:disabled {
             @include linear-gradient(alpha($selected_bg_color, .6));
 
-            color: $selected_fg_color;
+            color: alpha($selected_fg_color, .85);
             box-shadow: none;
+
+            :disabled {
+                color: alpha($selected_fg_color, .85);
+            }
         }
     }
 
