--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -278,9 +278,9 @@ $button_border_width: 1px;
     $border_focus_color: border_focus(alpha($fg, .2 + $button_border_strength));
     $selected_border_focus_color: border_focus(alpha($selected_bg_color, .2 + $button_border_strength));
 
-    .linked.horizontal > &:not(:last-child):not(:only-child),
-    .linked.horizontal > :not(:last-child):not(:only-child) &,
-    stackswitcher.horizontal >  &:not(:last-child):not(:only-child) {
+    .linked:not(.vertical) > &:not(:last-child):not(:only-child),
+    .linked:not(.vertical) > :not(:last-child):not(:only-child) &,
+    stackswitcher:not(.vertical) >  &:not(:last-child):not(:only-child) {
         border-right-style: none;
 
         &:hover {
@@ -290,9 +290,9 @@ $button_border_width: 1px;
         }
     }
 
-    .linked.horizontal > &:not(:last-child):not(:only-child):checked,
-    .linked.horizontal > :not(:last-child):not(:only-child) &:checked,
-    stackswitcher.horizontal >  &:not(:last-child):not(:only-child):checked {
+    .linked:not(.vertical) > &:not(:last-child):not(:only-child):checked,
+    .linked:not(.vertical) > :not(:last-child):not(:only-child) &:checked,
+    stackswitcher:not(.vertical) > &:not(:last-child):not(:only-child):checked {
         border-right-style: none;
 
         &:hover {
