Inactive Pane - Darker Background - Nemo
Adds support for the inactive pane to have a darker background in Nemo in dual pane view.

--- a/src/gtk-3.20/scss/apps/_nemo.scss
+++ b/src/gtk-3.20/scss/apps/_nemo.scss
@@ -17,6 +17,7 @@
     }
 
     .nemo-window {
+        .nemo-inactive-pane .view { background-color: $dark_bg_color; }
         toolbar {
             border-width: 0 0 1px;
             border-style: solid;
