--- a/src/gtk-3.20/scss/apps/_nemo.scss
+++ b/src/gtk-3.20/scss/apps/_nemo.scss
@@ -18,7 +18,7 @@
 
     .nemo-window {
         .nemo-inactive-pane .view { 
-            background-color: $dark_bg_color; 
+            background-color: mix($base_color, $text_color, .12);
         }
         
         toolbar {
