--- a/src/gtk-3.20/scss/apps/_nemo.scss
+++ b/src/gtk-3.20/scss/apps/_nemo.scss
@@ -17,6 +17,10 @@
     }
 
     .nemo-window {
+        .nemo-inactive-pane .view { 
+            background-color: mix($base_color, $text_color, .12);
+        }
+        
         toolbar {
             border-width: 0 0 1px;
             border-style: solid;
