Darker background for inactive pane in Nemo (#14)
* Darker background for inactive pane in Nemo

Adds support for a darker background on the inactive pane in dual pane view in Nemo.

--- a/src/gtk-3.0/scss/apps/_nemo.scss
+++ b/src/gtk-3.0/scss/apps/_nemo.scss
@@ -33,4 +33,7 @@
             -NemoPlacesTreeView-disk-full-fg-color: shade($selected_bg_color, 1.2);
         }
     }
+        NemoWindow .nemo-inactive-pane .view, NemoWindow .nemo-inactive-pane iconview {
+		    background-color: mix($base_color, $text_color, .12); 
+        }
 }
