--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -73,7 +73,7 @@
         background-image: none;
         text-shadow: none;
         border-style: none solid solid none;
-        border-color: $bg_color;
+        border-color: $borders_color;
 
         &:disabled {
             border-color: $bg_color;
@@ -247,12 +247,12 @@
 
         header {
             button {
-                $_column_header_color: mix($fg_color, $base_color, .5);
+                $_column_header_color: $fg_color;
 
                 @extend %column_header_button;
 
                 color: $_column_header_color;
-                background-color: $base_color;
+                background-color: $bg_color;
                 font-weight: bold;
                 text-shadow: none;
                 box-shadow: none;
@@ -260,7 +260,7 @@
                 &:hover {
                     @extend %column_header_button;
 
-                    color: mix($_column_header_color, $fg_color, .5);
+                    color: mix($_column_header_color, $selected_fg_color, .5);
                     box-shadow: none;
                     transition: none; //I shouldn't need this
                 }
