--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -253,7 +253,7 @@
 
                 color: $_column_header_color;
                 background-color: $bg_color;
-                font-weight: bold;
+                font-weight: normal;
                 text-shadow: none;
                 box-shadow: none;
 
