--- a/src/gtk-3.20/scss/widgets/_choosers.scss
+++ b/src/gtk-3.20/scss/widgets/_choosers.scss
@@ -168,7 +168,10 @@
             &:backdrop { border-top-color: $backdrop_borders_color; }
         }
 
-        #pathbarbox { border-bottom: 1px solid $bg_color; }
+        #pathbarbox {
+            border-bottom: 1px solid $borders_color;
+            background-color: $bg_color;
+        }
     }
 
     filechooserbutton:drop(active) {
