--- a/src/gtk-3.0/scss/widgets/_view.scss
+++ b/src/gtk-3.0/scss/widgets/_view.scss
@@ -190,6 +190,7 @@
 
 @include exports("columnheader") {
     column-header {
+        @extend %button;
         .button {
             &, &:active {
                 border-width: 0 1px 1px 0;
@@ -197,17 +198,13 @@
             }
 
             &, &:active, &:focus, &:active:focus {
-                border-color: shade($base_color, .9);
-                border-bottom-color: shade($base_color, .8);
-                background-color: shade($base_color, .97);
-                background-image: none;
+                border-color: shade($bg_color, .9);
+                border-bottom-color: shade($bg_color, .8);
             }
 
             &:hover, &:active:hover, &:hover:focus, &:active:hover:focus {
-                border-color: shade($base_color, .9);
-                border-bottom-color: shade($base_color, .8);
-                background-color: shade($base_color, .99);
-                background-image: none;
+                border-color: shade($bg_color, .9);
+                border-bottom-color: shade($bg_color, .8);
             }
 
             &:last-child .button { border-width: 0 0 1px; }
