--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -68,16 +68,15 @@
     }
 
     %column_header_button {
+        @extend %button;
         padding: ($spacing - 2px) ($spacing + 1px);
         border-radius: 0;
-        background-image: none;
         text-shadow: none;
-        border-style: none solid solid none;
-        border-color: $bg_color;
+        border-top-color: transparent;
+        border-left-color: transparent;
 
         &:disabled {
-            border-color: $bg_color;
-            background-image: none;
+            color: mix($fg_color, $bg_color, .5);
         }
 
         &:backdrop {
@@ -247,20 +246,17 @@
 
         header {
             button {
-                $_column_header_color: mix($fg_color, $base_color, .5);
-
                 @extend %column_header_button;
 
-                color: $_column_header_color;
-                background-color: $base_color;
-                font-weight: bold;
+                font-weight: normal;
                 text-shadow: none;
                 box-shadow: none;
 
                 &:hover {
                     @extend %column_header_button;
 
-                    color: mix($_column_header_color, $fg_color, .5);
+                    border-top-color: $selected_borders_color;
+                    border-left-color: $selected_borders_color;
                     box-shadow: none;
                     transition: none; //I shouldn't need this
                 }
@@ -268,7 +264,8 @@
                 &:active {
                     @extend %column_header_button;
 
-                    color: $fg_color;
+                    border-top-color: $selected_borders_color;
+                    border-left-color: $selected_borders_color;
                     transition: none; //I shouldn't need this
                 }
             }
