--- a/src/gtk-3.0/scss/_colors.scss
+++ b/src/gtk-3.0/scss/_colors.scss
@@ -34,6 +34,7 @@
 
 /* widget colors */
 @define-color titlebar_bg_color @dark_bg_color;
+@define-color titlebar_bg_uf_color #{"" + $titlebar_bg_uf_color};
 @define-color titlebar_fg_color @dark_fg_color;
 @define-color menubar_bg_color @dark_bg_color;
 @define-color menubar_fg_color @dark_fg_color;
@@ -54,7 +55,8 @@
 @define-color lightdm_fg_color #{"" + $lightdm_fg_color};
 
 /* window manager colors */
-@define-color wm_bg #{"" + $wm_bg};
+@define-color wm_bg_focused #{"" + $wm_bg_focused};
+@define-color wm_bg_unfocused #{"" + $wm_bg_unfocused};
 @define-color wm_border_focused #{"" + $wm_border_focused};
 @define-color wm_border_unfocused #{"" + $wm_border_unfocused};
 @define-color wm_title_focused #{"" + $wm_title_focused};
