--- a/src/gtk-3.0/scss/_global.scss
+++ b/src/gtk-3.0/scss/_global.scss
@@ -56,6 +56,7 @@ $toolbar_bg_color: $bg_color;
 $toolbar_fg_color: $fg_color;
 
 $titlebar_bg_color: $dark_bg_color;
+$titlebar_bg_uf_color: mix($bg_color, $dark_bg_color, .6);
 $titlebar_fg_color: $dark_fg_color;
 
 $menu_bg_color: $dark_bg_color;
@@ -74,7 +75,8 @@ $osd_bg: alpha($osd_base, 0.8);
 $lightdm_bg_color: $dark_bg_color;
 $lightdm_fg_color: $dark_fg_color;
 
-$wm_bg: $titlebar_bg_color;
+$wm_bg_focused: $titlebar_bg_color;
+$wm_bg_unfocused: mix($bg_color, $titlebar_bg_color, .1);
 $wm_border_focused: #%WM_BORDER_FOCUS%;
 $wm_border_unfocused: #%WM_BORDER_UNFOCUS%;
 $wm_title_focused: mix($titlebar_fg_color, $titlebar_bg_color, .1);
