--- a/src/gtk-3.0/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.0/scss/widgets/_toolbar.scss
@@ -85,7 +85,7 @@
         color: mix($titlebar_fg_color, $titlebar_bg_color, .1);
 
         &:backdrop {
-            @include linear-gradient($titlebar_bg_color);
+            @include linear-gradient($titlebar_bg_uf_color);
 
             color: mix($titlebar_fg_color, $titlebar_bg_color, .6);
             text-shadow: none;
