--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -122,7 +122,7 @@
         min-height: 42px;
 
         &:backdrop {
-            @include linear-gradient($titlebar_bg_color);
+            @include linear-gradient($titlebar_bg_uf_color);
 
             color: mix($titlebar_fg_color, $titlebar_bg_color, .6);
             text-shadow: none;
