--- a/src/gtk-3.20/scss/apps/_nemo.scss
+++ b/src/gtk-3.20/scss/apps/_nemo.scss
@@ -17,8 +17,9 @@
     }
 
     .nemo-window {
-        .nemo-inactive-pane .view { 
-            background-color: mix($base_color, $text_color, .12);
+		.nemo-inactive-pane .view { 
+			background-color: darken($base_color, 5%); 
+			color: $text_color; 
         }
         
         toolbar {
