--- a/src/gtk-3.0/scss/widgets/_actionbar.scss
+++ b/src/gtk-3.0/scss/widgets/_actionbar.scss
@@ -59,7 +59,7 @@
 @include exports("actionbuttons") {
     $types: (
         suggested: $success_color,
-        destructive: $error-color
+        destructive: $error_color
     );
 
     @each $type, $color in $types {
