--- a/src/gtk-3.0/scss/widgets/_button.scss
+++ b/src/gtk-3.0/scss/widgets/_button.scss
@@ -134,7 +134,7 @@
     box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12 + $shadow_strength);
 
     &.flat {
-        border-color: alpha($button_bg, 0);
+        @include border(rgba(0, 0, 0, .1 + $border_strength));
         background-color: alpha($button_bg, 0);
         background-image: none;
         box-shadow: none;
@@ -149,7 +149,7 @@
         }
 
         &:active, &:checked {
-            @include linear-gradient(shade($button_bg, .7), to top);
+            @include linear-gradient(shade($selected_bg_color, .9), to top);
 
             color: $selected_fg_color;
             box-shadow: inset 1px 0 alpha($dark_shadow, .06),
@@ -158,7 +158,7 @@
                         inset 0 -1px alpha($dark_shadow, .05);
 
             &:focus, &:hover {
-                @include linear-gradient(shade($button_bg, .65), to top);
+                @include linear-gradient(shade($selected_bg_color, .8), to top);
 
                 color: $selected_fg_color;
             }
