--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -346,7 +346,7 @@ $button_border_width: 1px;
     &.flat {
         //color: mix($bg, $fg, .2);
         color: $fg;
-        border-color: alpha($button_bg, 0);
+        @include border(alpha($fg, .1 + $button_border_strength));
         background-color: alpha($button_bg, 0);
         background-image: none;
         box-shadow: none;
