--- a/src/gtk-3.20/scss/widgets/_sidebar.scss
+++ b/src/gtk-3.20/scss/widgets/_sidebar.scss
@@ -220,7 +220,7 @@
         }
 
         &.titlebar > separator {
-            background-image: image(shade($titlebar_bg_color, ($contrast + .1)));
+            background-image: image(shade($titlebar_bg_focused, ($contrast + .1)));
         }
     }
 }
