Use titlebar_bg_unfocused to choose wm_title_unfocused color

--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -117,7 +117,7 @@ $wm_title_focused: choose_contrast_color(
 );
 $wm_title_unfocused: choose_contrast_color(
     $wm_border_unfocused,
-    $titlebar_bg_focused,
+    $titlebar_bg_unfocused,
     $titlebar_fg_color
 );
 $wm_icons_focused: $wm_title_focused;
