--- a/src/gtk-3.0/scss/_global.scss
+++ b/src/gtk-3.0/scss/_global.scss
@@ -76,7 +76,7 @@ $lightdm_bg_color: $dark_bg_color;
 $lightdm_fg_color: $dark_fg_color;
 
 $wm_bg_focused: $titlebar_bg_focused;
-$wm_bg_unfocused: mix($bg_color, $titlebar_bg_focused, .1);
+$wm_bg_unfocused: mix($bg_color, $titlebar_bg_unfocused, .1);
 $wm_border_focused: #%WM_BORDER_FOCUS%;
 $wm_border_unfocused: #%WM_BORDER_UNFOCUS%;
 $wm_title_focused: mix($titlebar_fg_color, $titlebar_bg_focused, .1);
