--- a/src/gtk-3.0/scss/apps/_unity.scss
+++ b/src/gtk-3.0/scss/apps/_unity.scss
@@ -34,10 +34,10 @@
             text-shadow: none;
 
             &:backdrop {
-                border: 1px solid mix(shade($titlebar_bg_focused, 0.7), $titlebar_fg_color, 0.12);
+                border: 1px solid mix(shade($titlebar_bg_unfocused, 0.7), $titlebar_fg_color, 0.12);
                 border-bottom: 0;
-                background-color: $titlebar_bg_focused;
-                color: mix($titlebar_fg_color, $titlebar_bg_focused, .4);
+                background-color: $titlebar_bg_unfocused;
+                color: mix($titlebar_fg_color, $titlebar_bg_unfocused, .4);
             }
         }
 
@@ -45,7 +45,7 @@
             background-color: mix(shade($titlebar_bg_focused, 0.7), $titlebar_fg_color, 0.21);
 
             &:backdrop { 
-               background-color: mix(shade($titlebar_bg_focused, 0.7), $titlebar_fg_color, 0.12);
+               background-color: mix(shade($titlebar_bg_unfocused, 0.7), $titlebar_fg_color, 0.12);
             }
         }
     }
