--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -107,7 +107,7 @@ $lightdm_button_bg_color: $header_button_bg_color;
 $lightdm_button_fg_color: $header_button_fg_color;
 
 $wm_bg_focused: $titlebar_bg_focused;
-$wm_bg_unfocused: mix($bg_color, $titlebar_bg_focused, .1);
+$wm_bg_unfocused: mix($bg_color, $titlebar_bg_unfocused, .1);
 $wm_border_focused: #%WM_BORDER_FOCUS%;
 $wm_border_unfocused: #%WM_BORDER_UNFOCUS%;
 $wm_title_focused: choose_contrast_color(
