--- a/src/gtk-3.20/scss/apps/_unity.scss
+++ b/src/gtk-3.20/scss/apps/_unity.scss
@@ -45,14 +45,14 @@
 
             &:backdrop {
                 border: 1px solid $wm_border_unfocused;
-                color: mix($titlebar_fg_color, $titlebar_bg_focused, .4);
+                color: mix($titlebar_fg_color, $titlebar_bg_unfocused, .4);
             }
         }
 
         .left, .right, .bottom {
             background-color: $titlebar_bg_focused;
 
-            &:backdrop { background-color: mix(shade($titlebar_bg_focused, .7), $titlebar_fg_color, .21); }
+            &:backdrop { background-color: mix(shade($titlebar_bg_unfocused, .7), $titlebar_fg_color, .21); }
         }
     }
 
