--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -124,7 +124,7 @@
         &:backdrop {
             @include linear-gradient($titlebar_bg_unfocused);
 
-            color: mix($titlebar_fg_color, $titlebar_bg_focused, .6);
+            color: mix($titlebar_fg_color, $titlebar_bg_unfocused, .6);
             text-shadow: none;
         }
 
@@ -180,7 +180,7 @@
 
             &:backdrop {
                 background: none;
-                color: mix($titlebar_fg_color, $titlebar_bg_focused, .6);
+                color: mix($titlebar_fg_color, $titlebar_bg_unfocused, .6);
                 -gtk-icon-shadow: none;
             }
         }
