--- a/src/gtk-3.20/scss/_global.scss
+++ b/src/gtk-3.20/scss/_global.scss
@@ -80,8 +80,10 @@ $error_bg_color: $error_color;
 $toolbar_bg_color: $bg_color;
 $toolbar_fg_color: $fg_color;
 
-$titlebar_bg_color: $dark_bg_color;
-$titlebar_fg_color: $dark_fg_color;
+$titlebar_bg_focused: $dark_bg_color;
+$titlebar_bg_unfocused: $bg_color;
+$titlebar_fg_focused: $dark_fg_color;
+$titlebar_fg_unfocused: mix($fg_color, $bg_color, .4);
 
 $menu_bg_color: $dark_bg_color;
 $menu_fg_color: $dark_fg_color;
@@ -105,23 +107,16 @@ $lightdm_fg_color: $dark_fg_color;
 $lightdm_button_bg_color: $header_button_bg_color;
 $lightdm_button_fg_color: $header_button_fg_color;
 
-$wm_bg: $titlebar_bg_color;
+$wm_bg_focused: $titlebar_bg_focused;
+$wm_bg_unfocused: $titlebar_bg_unfocused;
 $wm_border_focused: #%WM_BORDER_FOCUS%;
 $wm_border_unfocused: #%WM_BORDER_UNFOCUS%;
-$wm_title_focused: choose_contrast_color(
-    $wm_border_focused,
-    $titlebar_bg_color,
-    $titlebar_fg_color
-);
-$wm_title_unfocused: choose_contrast_color(
-    $wm_border_unfocused,
-    $titlebar_bg_color,
-    $titlebar_fg_color
-);
-$wm_icons_focused: $wm_title_focused;
+$wm_title_focused: $titlebar_fg_focused;
+$wm_title_unfocused: $titlebar_fg_unfocused;
+$wm_icons_focused: $titlebar_fg_focused;
 $wm_icons_focused_prelight: $selected_bg_color;
 $wm_icons_focused_pressed: shade($selected_bg_color, .8);
-$wm_icons_unfocused: $wm_title_unfocused;
+$wm_icons_unfocused: $titlebar_fg_unfocused;
 $wm_icons_unfocused_prelight: $selected_bg_color;
 $wm_icons_unfocused_pressed: shade($selected_bg_color, .8);
 
