GTK3.18 & GTK3.20 - Tweak for nemo dual pane view

--- a/src/gtk-3.0/scss/apps/_nemo.scss
+++ b/src/gtk-3.0/scss/apps/_nemo.scss
@@ -34,6 +34,7 @@
         }
     }
         NemoWindow .nemo-inactive-pane .view, NemoWindow .nemo-inactive-pane iconview {
-		    background-color: mix($base_color, $text_color, .12); 
+        background-color: mix($base_color, $text_color, .12);
+        color: $text_color;
         }
 }
