--- a/src/gtk-3.20/scss/apps/_nemo.scss
+++ b/src/gtk-3.20/scss/apps/_nemo.scss
@@ -19,6 +19,7 @@
     .nemo-window {
         .nemo-inactive-pane .view { 
             background-color: mix($base_color, $text_color, .12);
+            color: $text_color;
         }
         
         toolbar {
