GTK3.18 & GTK3.20 - Fix -color typo to

--- a/src/gtk-3.20/scss/widgets/_actionbar.scss
+++ b/src/gtk-3.20/scss/widgets/_actionbar.scss
@@ -39,7 +39,7 @@
 @include exports("actionbuttons") {
     $types: (
         suggested: $success_color,
-        destructive: $error-color
+        destructive: $error_color
     );
 
     @each $type, $color in $types {
