--- a/src/cinnamon/scss/sections/_notifications.scss
+++ b/src/cinnamon/scss/sections/_notifications.scss
@@ -1,93 +1,81 @@
-/* ======================================
- * ! Notifications
- * ====================================== */
-
-.url-highlighter { link-color: $text-link; }
-
 #notification {
-    border-image: url("img/containers/popup.svg") 7;
-    padding: 1.3em;
-    spacing-rows: .3em;
-    spacing-columns: 10px;
-    width: 34em;
-    margin-from-right-edge-of-screen: 6px;
-    font-weight: bold;
-    font-size: $font-size-base;
-    color: $text-primary;
-
-    CinnamonGenericContainer * {
-        font-weight: normal;
-        font-size: $font-size-base;
-        color: $text-secondary;
-
-        &:first-child {
-            font-weight: bold;
-            font-size: $font-size-base;
-            padding-top: .3em;
-            color: $text-primary;
-        }
-
-        &:last-child {
-            padding-top: .3em;
-            color: $text-primary;
-        }
-    }
-
-    &-body {
-        font-weight: normal;
-        font-size: $font-size-base;
-        padding-top: .6em;
-    }
-
-    &-actions {
-        spacing: .3em;
-    }
-
-    // min-height hack to prevent image stretching
-    &.notification-with-image {
-        min-height: 164px;
-
-        .popup-menu-content & {
-            min-height: 178px;
-        }
-
-        #notification-body {
-            padding: 0;
-        }
-    }
+    border-radius: $roundness;
+	border: 1px solid $borders_color;
+	@extend %bg-grad-horiz-dark-to-light;
+	padding: 8px;
+	spacing-rows: 5px;
+	spacing-columns: 10px;
+	margin-from-right-edge-of-screen: 10px;
+	width: 25em;
+	color: $dark_fg_color;
+	&.multi-line-notification {
+		padding-bottom: 8px;
+		color: $dark_fg_color;
+	}
+	StEntry {
+		@extend %dialog-entry;
+		&:focus {
+			border: 1px solid $selected_borders_color;
+		}
+	}
 }
-
-.notification-button,
+.notification-with-image {
+	min-height: 159px;
+	color: $dark_fg_color;
+}
+#notification-scrollview {
+	max-height: 10em;
+	> {
+		.top-shadow {
+			height: 1em;
+		}
+		.bottom-shadow {
+			height: 1em;
+		}
+	}
+	&:ltr > StScrollBar {
+		padding-left: 6px;
+	}
+	&:rtl > StScrollBar {
+		padding-right: 6px;
+	}
+}
+#notification-body {
+	spacing: 5px;
+}
+#notification-actions {
+	spacing: 10px;
+}
+.notification-button {
+	@extend %shared-button;
+	border-radius: $roundness;
+	padding: 4px 8px 5px;
+	&:hover {
+		border: 1px solid $selected_borders_color;
+	}
+	&:focus {
+		color: $selected_fg_color;
+		padding: 3px 8px 4px;
+	}
+	&:active {
+		@extend %shared-button-active;
+	}
+}
 .notification-icon-button {
-    @include btn-primary;
+	@extend %shared-button;
+	border-radius: $roundness;
+	padding: 5px;
+	&:hover {
+		border: 1px solid $selected_borders_color;
+	}
+	&:focus {
+		color: $selected_fg_color;
+		padding: 4px;
+	}
+	&:active {
+		@extend %shared-button-active;
+	}
+	> StIcon {
+		icon-size: 3.5em;
+	}
 }
-
-.notification-button      { @include btn-width(wide); }
-.notification-icon-button { @include btn-width(small); }
-
-
-/* ======================================
- * ! Notification applet
- * ====================================== */
-
-#traycontainer {
-    padding: .4em .5em;
-
-    StScrollBar { padding: .4em 0 .4em .3em; }
-
-    .notification-applet-padding { padding: .4em 0; }
-
-    #notification {
-        border-image: url("img/containers/light-bg-marked-orange.svg") 7;
-        padding: .8em .8em .8em 1em;
-
-        &.multi-line-notification {
-            border-image: url("img/containers/light-bg-marked-blue.svg") 7;
-        }
-
-        &.notification-with-image {
-            border-image: url("img/containers/light-bg-marked-green.svg") 7;
-        }
-    }
-}
-
